--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -1,10 +1,11 @@
 @import "modules/all";
+
 @import "inputs/all";
+@import "appbar";
 @import "avatar";
+@import "button";
 @import "card";
 @import "form";
-
-@font-face {
-    font-family: Roboto;
-    src: url(../fonts/Roboto.woff2);
-}
+@import "icon";
+@import "ripple";
+@import "tooltip";
