removing unwanted references

--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -35,7 +35,7 @@
             }
           }
 
-          .tesla-logo{
+          .logo{
             margin: 0px 15px;
             width: 100px;
             height: 13px;
