added basic namespacing to icons, buttons, tooltips, and ripples

--- a/src/sass/_tooltip.scss
+++ b/src/sass/_tooltip.scss
@@ -1,4 +1,4 @@
-.tooltip-anchor-wrapper{
+.wood.tooltip-anchor-wrapper{
   position: absolute;
   top:0;
   left:0;
@@ -35,12 +35,12 @@
       @include flexbox;
       @include justify-content(center);
 
-      .wood-tooltip{
+      .wood.tooltip{
         border-radius: 2px;
         padding: 0px 8px;
         height: 0px;
         white-space: nowrap;
-        
+
         background-color: rgb(97, 97, 97);
         color: rgb(255, 255, 255);
         font-family: Roboto, sans-serif;
