improved button interactions, made forms acceptable, made a crappy item view

--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -1,13 +1,3 @@
-// .btns{
-//   @include flexbox;
-//
-//   .submit-btn{
-//     @include flexbox;
-//     @include flex-grow(1);
-//
-//     .button{
-//       margin-top: 16px;
-//       @include flex-grow(1);
-//     }
-//   }
-// }
+.input-list{
+  padding: 6px;
+}
