--- a/src/sass/_tooltip.scss
+++ b/src/sass/_tooltip.scss
@@ -35,7 +35,7 @@
       @include flexbox;
       @include justify-content(center);
 
-      .wood.tooltip{
+      .wood-tooltip{
         border-radius: 2px;
         padding: 0px 8px;
         height: 0px;
