--- a/src/sass/_button.scss
+++ b/src/sass/_button.scss
@@ -1,3 +1,20 @@
+wood-label{
+  height: 100%;
+
+  @include flexbox;
+  @include justify-content(center);
+  @include align-items(center);
+
+  .icon-wrapper{
+    height: 100%;
+  }
+
+  .icon-wrapper,
+  .text-wrapper{
+    margin: 0 5px;
+  }
+}
+
 .wood.button{
   border: 10px;
   border-radius: 2px;
@@ -16,6 +33,8 @@
   box-sizing: border-box;
   transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 
+
+
   &:hover,
   &.pressed,
   &.focused{
@@ -31,6 +50,15 @@
     &.focused{
       box-shadow: rgba(0, 0, 0, 0.156863) 0px 3px 10px, rgba(0, 0, 0, 0.227451) 0px 3px 10px;
     }
+
+    &:disabled{
+      box-shadow: none;
+    }
+  }
+
+  &:disabled{
+    background: #eaeaea;
+    color: #a8a8a8;
   }
 
   .ripple-container{
@@ -41,7 +69,10 @@
     width: 100%;
   }
 
-  .btnlabel{
+  .label-wrapper{
+    height: 100%;
+    width: 100%;
+
     margin: 0;
     padding: 0 16px;
     position: relative;
