--- a/src/sass/_spinner.scss
+++ b/src/sass/_spinner.scss
@@ -19,11 +19,26 @@
 }
 
 wood-spinner{
+  margin: 5px;
+
+  &.overlay{
+    @include flexbox;
+    @include justify-content(center);
+    @include align-items(center);
+    position: absolute;
+    top:0;
+    left:0;
+    height: 100%;
+    width: 100%;
+    z-index: 1000;
+    cursor: wait;
+    background-color: #F9F9F9;
+    opacity: 0.8;
+  }
+
   .circular {
     animation: rotate 2s linear infinite;
-    height: 100%;
     transform-origin: center center;
-    width: 100%;
     margin: auto;
   }
 
