appbar deprecated... now is toolbar

--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -1,7 +1,6 @@
 @import "modules/all";
 
 @import "inputs/all";
-@import "appbar";
 @import "avatar";
 @import "button";
 @import "card";
@@ -11,4 +10,5 @@
 @import "ripple";
 @import "spinner";
 @import "table";
+@import "toolbar";
 @import "tooltip";
