added alpha tree view and checkbox

--- a/src/sass/_avatar.scss
+++ b/src/sass/_avatar.scss
@@ -1,13 +1,14 @@
-.wood.avatar{
+wood-avatar{
   height: 100%;
   width: 100%;
 
   .shape{
+    height: 100%;
+    width: 100%;
+
     @include flexbox;
     @include justify-content(center);
     @include align-items(center);
     margin: auto;
-
-    background-color: white;
   }
 }
