--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -1,4 +1,5 @@
-.wood.card{
+wood-card{
+  display: block;
   width: 400px;
   border-radius: 2px;
   background-color: #ffffff;
@@ -10,6 +11,7 @@
   border-radius: 2px;
   overflow: hidden;
   z-index: 1;
+  margin-bottom: 20px;
 
   .card-header{
     height: 50px;
