--- a/src/sass/_item.scss
+++ b/src/sass/_item.scss
@@ -1,49 +1,55 @@
-.wood.item{
+wood-item{
+  display: block;
   height: 60px;
-
-  @include flexbox;
-  @include justify-content(space-between);
-  @include align-items(center);
 
   &:hover{
     background-color: #fafafa;
   }
-  
-  .left-icon{
-    height: 40px;
-    width: 40px;
-    margin: 0px 16px 0px 16px;
 
-    .shape{
-      background-color: rgba(244,67,54,1);
+  .item-wrapper{
+    @include flexbox;
+    @include justify-content(space-between);
+    @include align-items(center);
+    height: 100%;
+    width: 100%;
+    padding-left: 16px;
+
+    .right-icon,
+    .left-icon{
+      height: 40px;
+      width: 40px;
+      @include flexbox;
+      @include justify-content(center);
+      @include align-items(center);
+
+      .icon{
+        font-size: 18px;
+      }
     }
 
-    .icon{
-      font-size: 24px;
-    }
-  }
+    .item-body{
+      @include flex-grow(2);
+      min-width: 200px;
 
-  .item-body{
-    @include flex-grow(2);
+      .primary-text{
+        font-size: 13px;
+        line-height: 19px;
+        max-height: 22px;
 
-    .primary-text{
-      font-size: 13px;
-      line-height: 19px;
-      max-height: 22px;
+        text-overflow: ellipsis;
+        word-wrap: break-word;
+        overflow: hidden;
+      }
 
-      text-overflow: ellipsis;
-      word-wrap: break-word;
-      overflow: hidden;
-    }
+      .secondary-text{
+        font-size: 11px;
+        line-height: 17px;
+        max-height: 34px;
 
-    .secondary-text{
-      font-size: 11px;
-      line-height: 17px;
-      max-height: 34px;
-
-      text-overflow: ellipsis;
-      word-wrap: break-word;
-      overflow: hidden;
+        text-overflow: ellipsis;
+        word-wrap: break-word;
+        overflow: hidden;
+      }
     }
   }
 }
