--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -5,9 +5,11 @@
 @import "button";
 @import "card";
 @import "dialog";
+@import "dropdown";
 @import "form";
 @import "icon";
 @import "item";
+@import "list";
 @import "ripple";
 @import "spinner";
 @import "table";
