--- a/src/sass/_button.scss
+++ b/src/sass/_button.scss
@@ -6,7 +6,6 @@ wood-label{
   @include align-items(center);
 
   .icon-wrapper{
-    height: 100%;
     @include flexbox;
   }
 
@@ -33,7 +32,8 @@ wood-label{
   box-sizing: border-box;
   transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 
-
+  @include flexbox;
+  @include align-items(center);
 
   &:hover,
   &.pressed,
@@ -43,7 +43,6 @@ wood-label{
 
   &.raised{
     color: white;
-    background-color: map-get($colors, 'secondary');
     box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
 
     &:hover,
@@ -53,6 +52,21 @@ wood-label{
 
     &:disabled{
       box-shadow: none;
+    }
+  }
+
+  &.dropdown{
+    .label-wrapper{
+      padding-right: 0px;
+    }
+
+    .caret-wrapper{
+      height: inherit;
+      width: 40px;
+      z-index: 1;
+      @include flexbox;
+      @include justify-content(center);
+      @include align-items(center);
     }
   }
 
