--- a/src/sass/_dropdown.scss
+++ b/src/sass/_dropdown.scss
@@ -1,23 +1,35 @@
 wood-dropdown{
+  display: block;
+  position: relative;
+
 
   .button-container{
   }
 
-  .dropdown-container{
-    background-color: white;
-    position: relative;
-    z-index: 1001;
-    box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
+  .dropdown-anchor{
+    height: 0px;
+    width: 0px;
 
-    display: none;
-    overflow: hidden;
-    max-height: 500px;
-    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-    margin: 5px;
-    padding: 5px;
+    .dropdown-container{
+      background-color: white;
+      z-index: 1001;
+      box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
+      position: absolute;
 
-    &.expanded{
-      display: block;
+      display: none;
+      overflow: hidden;
+      max-height: 500px;
+      transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+      margin: 5px;
+      padding: 5px;
+
+      &.floatRight{
+        right: 0px;
+      }
+
+      &.expanded{
+        display: block;
+      }
     }
   }
 }
