--- a/src/sass/_icon.scss
+++ b/src/sass/_icon.scss
@@ -37,12 +37,17 @@ wood-checkbox{
 
   .check-wrapper i{
     font-size: 0px;
-    margin-bottom: 2px;
+    margin-bottom: 5px;
   }
 
   &[checked]{
     .check-wrapper i{
       font-size: 16px;
+    }
+
+    .box-wrapper i{
+      font-size: 18px;
+      color: rgba( 0,    188,  212,  1);
     }
   }
 }
@@ -52,7 +57,14 @@ wood-icon-list{
   @include flexbox;
   @include align-items(center);
 
-  .wood-icon{
+  > .wood-icon{
     padding: 12px;
   }
+}
+
+wood-separator{
+  display: block;
+  height: 32px;
+  border-right: solid 2px grey;
+  margin: 0 10px;
 }
