--- a/src/sass/_item.scss
+++ b/src/sass/_item.scss
@@ -9,7 +9,7 @@ wood-item{
       background-color: #fafafa;
     }
   }
-  
+
   .item-wrapper{
     @include flexbox;
     @include justify-content(space-between);
@@ -34,7 +34,8 @@ wood-item{
     .item-body{
       @include flex-grow(2);
       padding-right: 16px;
-
+      min-width: 150px;
+      
       .primary-text{
         font-size: 13px;
         line-height: 19px;
