--- a/src/sass/_icon.scss
+++ b/src/sass/_icon.scss
@@ -32,22 +32,22 @@ wood-checkbox{
   }
 
   .box-wrapper i{
+    height: 18px;
+    width: 18px;
     font-size: 18px;
   }
 
   .check-wrapper i{
     font-size: 0px;
-    margin-bottom: 5px;
   }
 
   &[checked]{
     .check-wrapper i{
-      font-size: 16px;
+      font-size: 18px;
     }
 
     .box-wrapper i{
-      font-size: 18px;
-      color: rgba( 0,    188,  212,  1);
+      color: rgba( 0,    188,  212,  0);
     }
   }
 }
