--- a/src/sass/_icon.scss
+++ b/src/sass/_icon.scss
@@ -14,6 +14,10 @@
    font-size: 18px;
    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
  }
+
+ &:disabled{
+   opacity: 0.3;
+ }
 }
 
 wood-checkbox{
