--- a/src/sass/_list.scss
+++ b/src/sass/_list.scss
@@ -8,3 +8,13 @@ wood-divider{
   display: block;
   border-bottom: solid 1px grey;
 }
+
+wood-subheader{
+  box-sizing: border-box;
+  color: rgba(0, 0, 0, 0.541176);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 48px;
+  padding-left: 16px;
+  width: 100%;
+}
