improved multiline spacing for lists

--- a/src/sass/modules/_flexbox.scss
+++ b/src/sass/modules/_flexbox.scss
@@ -34,6 +34,12 @@
 	-webkit-flex-grow: $fg;
 }
 
+@mixin flex-shrink($fs) {
+	flex-shrink: $fs;
+	-ms-flex-shrink: $fs;
+	-webkit-flex-shrink: $fs;
+}
+
 @mixin align-content($ac) {
 	align-content: $ac;
 	-ms-align-content: $ac;
