--- a/src/sass/_item.scss
+++ b/src/sass/_item.scss
@@ -1,13 +1,12 @@
 wood-item{
   display: block;
-  height: 56px;
 
   &.button{
     cursor: pointer;
 
     &:hover{
       background-color: rgba(0,0,0,0.098);
-      transition: background-color 0.25s ease;
+      transition: background-color 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;;
     }
   }
 
@@ -15,8 +14,6 @@ wood-item{
     @include flexbox;
     @include justify-content(space-between);
     @include align-items(center);
-    height: 100%;
-    width: 100%;
     padding: 0 16px;
 
     .right-icon,
@@ -26,6 +23,7 @@ wood-item{
       @include flexbox;
       @include justify-content(center);
       @include align-items(center);
+      @include flex-shrink(0);
 
       .icon{
         font-size: 18px;
@@ -39,11 +37,12 @@ wood-item{
     .item-body{
       @include flex-grow(2);
       padding-right: 16px;
+      padding: 16px 0;
       min-width: 150px;
 
       .primary-text{
         font-size: 13px;
-        line-height: 19px;
+        line-height: 14px;
         max-height: 22px;
 
         text-overflow: ellipsis;
@@ -53,11 +52,12 @@ wood-item{
 
       .secondary-text{
         font-size: 11px;
-        line-height: 17px;
-        max-height: 34px;
+        line-height: 13px;
+        max-height: 26px;
+        margin-top: 2px;
 
+        color: rgba(0, 0, 0, 0.541176);
         text-overflow: ellipsis;
-        word-wrap: break-word;
         overflow: hidden;
       }
     }
