add checkbox disable and tooltip

--- a/src/sass/_icon.scss
+++ b/src/sass/_icon.scss
@@ -56,6 +56,12 @@ wood-checkbox{
       color: rgba( 0,    0,  0,  0);
     }
   }
+
+  &[disabled]{
+    .check-wrapper i{
+      opacity: 0.3;
+    }
+  }
 }
 
 wood-icon-list{
