--- a/src/sass/_spinner.scss
+++ b/src/sass/_spinner.scss
@@ -35,6 +35,7 @@ wood-spinner{
   }
 
   .circular {
+    display: block;
     animation: rotate 2s linear infinite;
     transform-origin: center center;
     margin: auto;
