--- a/src/sass/_icon.scss
+++ b/src/sass/_icon.scss
@@ -16,7 +16,13 @@
  }
 
  &:disabled{
-   opacity: 0.3;
+   i{
+    opacity: 0.3;
+   }
+
+   .wood-tooltip{
+     background-color: rgb(208, 208, 208) !important;
+   }
  }
 }
 
