first steps in es2015, webpack build, and nicely inheritable lists

--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -1,6 +1,5 @@
 @import "modules/all";
 
-@import "inputs/all";
 @import "avatar";
 @import "button";
 @import "card";
@@ -9,10 +8,12 @@
 @import "form";
 @import "icon";
 @import "item";
+@import "input";
 @import "list";
 @import "ripple";
 @import "spinner";
 @import "table";
+@import "text";
 @import "toolbar";
 @import "tooltip";
 @import "tree";
