--- a/src/sass/modules/_fonts.scss
+++ b/src/sass/modules/_fonts.scss
@@ -1,18 +1,18 @@
 @font-face {
     font-family: Roboto;
-    src: url(../fonts/Roboto.woff2);
+    src: font-url("../fonts/Roboto.woff2");
 }
 
 @font-face {
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: font-url("../fonts/MaterialIcons-Regular.eot"); /* For IE6-8 */
   src: local('Material Icons'),
        local('MaterialIcons-Regular'),
-       url(../fonts/MaterialIcons-Regular.woff2) format('woff2'),
-       url(../fonts/MaterialIcons-Regular.woff) format('woff'),
-       url(../fonts/MaterialIcons-Regular.ttf) format('truetype');
+       font-url("../fonts/MaterialIcons-Regular.woff2"),
+       font-url("../fonts/MaterialIcons-Regular.woff"),
+       font-url("../fonts/MaterialIcons-Regular.truetype");
 }
 
 .material-icons {
