--- a/src/sass/_dialog.scss
+++ b/src/sass/_dialog.scss
@@ -1,15 +1,19 @@
-.model-modal{
-  .model-form{
-    .input-wrapper{
-      .bootstrap-select{
-          width:100% !important;
-      }
+.modal-body{
+    max-height: 700px;
+    overflow-y: auto;
+}
 
-      .checkbox{
-        input[type="checkbox"]{
-          margin-left: 0px;
+.model-modal {
+    .model-form {
+        .input-wrapper {
+            .bootstrap-select {
+                width: 100% !important;
+            }
+            .checkbox {
+                input[type="checkbox"] {
+                    margin-left: 0;
+                }
+            }
         }
-      }
     }
-  }
 }
