--- a/src/sass/modules/_fonts.scss
+++ b/src/sass/modules/_fonts.scss
@@ -1,18 +1,20 @@
+$path : "../";
+
 @font-face {
     font-family: Roboto;
-    src: font-url("../fonts/Roboto.woff2");
+    src: url("../fonts/Roboto.woff2") format("woff2");
 }
 
 @font-face {
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: font-url("../fonts/MaterialIcons-Regular.eot"); /* For IE6-8 */
+  src: url("../fonts/MaterialIcons-Regular.eot"); /* For IE6-8 */
   src: local('Material Icons'),
        local('MaterialIcons-Regular'),
-       font-url("../fonts/MaterialIcons-Regular.woff2"),
-       font-url("../fonts/MaterialIcons-Regular.woff"),
-       font-url("../fonts/MaterialIcons-Regular.truetype");
+       url("../fonts/MaterialIcons-Regular.woff2"),
+       url("../fonts/MaterialIcons-Regular.woff"),
+       url("../fonts/MaterialIcons-Regular.truetype");
 }
 
 .material-icons {
