--- a/src/sass/_item.scss
+++ b/src/sass/_item.scss
@@ -4,6 +4,7 @@ wood-item{
   &.button{
     cursor: pointer;
 
+    &.hover,
     &:hover{
       background-color: rgba(0,0,0,0.098);
       transition: background-color 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;;
